"cereal" name already taken on pypi.

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,8 @@ zip_ok = false
 
 [nosetests]
 match=^test
-where=cereal
+where=colander
 nocapture=1
-cover-package=cereal
+cover-package=colander
 cover-erase=1
 
