--- a/setup.cfg
+++ b/setup.cfg
@@ -8,3 +8,23 @@ nocapture=1
 cover-package=colander
 cover-erase=1
 
+[compile_catalog]
+directory = colander/locale
+domain = colander
+statistics = true
+
+[extract_messages]
+add_comments = TRANSLATORS:
+output_file = colander/locale/colander.pot
+width = 80
+
+[init_catalog]
+domain = colander
+input_file = colander/locale/colander.pot
+output_dir = colander/locale
+
+[update_catalog]
+domain = colander
+input_file = colander/locale/colander.pot
+output_dir = colander/locale
+previous = true
