--- a/tox.ini
+++ b/tox.ini
@@ -17,11 +17,11 @@ commands =
     python setup.py nosetests --with-xunit --with-xcoverage
 deps = 
     nose
-    coverage<3.4
+    coverage==3.4
     nosexcover
 
 # we separate coverage into its own testenv because a) "last run wins" wrt
 # cobertura jenkins reporting and b) pypy and jython can't handle any
 # combination of versions of coverage and nosexcover that i can find.
-# coverage <3.4 is required by nosexcover 1.0.4.
+# coverage==3.4 is required by nosexcover
 
