--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,10 @@
 [tox]
 envlist = 
-    py26,py27,py32,jython,pypy,cover
+    py26,py27,py32,pypy,cover
 
 [testenv]
 commands = 
     python setup.py test -q
-
-[testenv:jython]
-commands = 
-   jython setup.py test -q
 
 [testenv:cover]
 basepython =
