add dev and testing setup.py aliases, fix changelog after reviewing commits

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,10 @@ nocapture=1
 cover-package=colander
 cover-erase=1
 
+[aliases]
+dev = develop easy_install colander[testing]
+docs = develop easy_install colander[docs]
+
 [compile_catalog]
 directory = colander/locale
 domain = colander
