--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,11 @@
 [tox]
 envlist =
-    py26,py27,py32,pypy,cover
+    py26,py27,py32,py33,pypy,cover
 
 [testenv]
 commands =
-    python setup.py test -q
+    python setup.py dev
+    python -Wd setup.py test -q
 
 [testenv:cover]
 basepython =
@@ -12,12 +13,4 @@ basepython =
 commands =
     python setup.py nosetests --with-xunit --with-xcoverage
 deps =
-    nose
-    coverage==3.4
     nosexcover
-
-# we separate coverage into its own testenv because a) "last run wins" wrt
-# cobertura jenkins reporting and b) pypy and jython can't handle any
-# combination of versions of coverage and nosexcover that i can find.
-# coverage==3.4 is required by nosexcover
-
