--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py26,py27,py32,py33,pypy,cover
+    py26,py27,py32,py33,pypy,cover,docs
 
 [testenv]
 commands =
@@ -14,3 +14,12 @@ commands =
     python setup.py nosetests --with-xunit --with-xcoverage
 deps =
     nosexcover
+
+[testenv:docs]
+basepython =
+    python2.6
+commands = 
+    sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html
+#    sphinx-build -b doctest -d docs/_build/doctrees docs docs/_build/doctest
+deps =
+    Sphinx
