Require preserving 100% coverage.

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ commands =
 basepython =
     python2.6
 commands =
-    python setup.py nosetests --with-xunit --with-xcoverage
+    python setup.py nosetests --with-xunit --with-xcoverage --cover-min-percentage=100
 deps =
     nosexcover
 
