Silence setuptools chatter.
Prefer Python 2.7 over 2.6 for coverage, docs.

--- a/tox.ini
+++ b/tox.ini
@@ -4,20 +4,22 @@ envlist =
 
 [testenv]
 commands =
-    python setup.py dev
-    python -Wd setup.py test -q
+    python setup.py -q dev
+    python -Wd setup.py -q test -q
 
 [testenv:cover]
 basepython =
-    python2.6
+    python2.7
 commands =
-    python setup.py nosetests --with-xunit --with-xcoverage --cover-min-percentage=100
+    nosetests --with-xunit --with-xcoverage --cover-min-percentage=100
 deps =
+    nose
+    coverage
     nosexcover
 
 [testenv:docs]
 basepython =
-    python2.6
+    python2.7
 commands = 
     sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html
 deps =
