--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,6 @@ deps =
 [testenv:docs]
 basepython =
     python2.7
-commands = 
+commands =
+    pip install colander[docs]
     sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html
-deps =
-    Sphinx
