--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ X-Python-Version: >= 2.7
 
 Package: python-colander
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends}
+Depends: ${misc:Depends}, ${python:Depends}, python-translationstring
 Provides: ${python:Provides}
 Description: a library that permit easy parameter validation in pyramid/cornice
  See https://github.com/Pylons/colander
