--- a/tox.ini
+++ b/tox.ini
@@ -23,3 +23,4 @@ basepython =
 commands =
     pip install colander[docs]
     sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html
+    sphinx-build -b doctest docs docs/_build/doctest
