Simplify tox by adding py-cover
And simply including those in py2-cover/py3-cover. This way we have a
single place to make a change if necessary.

--- a/tox.ini
+++ b/tox.ini
@@ -32,19 +32,22 @@ commands =
 # we separate coverage into its own testenv because a) "last run wins" wrt
 # cobertura jenkins reporting and b) pypy and jython can't handle any
 # combination of versions of coverage and nosexcover that i can find.
-[testenv:py2-cover]
+
+[py-cover]
 commands =
     pip install colander[testing]
     coverage run --source=colander {envbindir}/nosetests
-    coverage xml -o coverage-py2.xml
+    coverage xml -o {envname}.xml
+
+[testenv:py2-cover]
+commands =
+    {[py-cover]commands}
 setenv =
     COVERAGE_FILE=.coverage.py2
 
 [testenv:py3-cover]
 commands =
-    pip install colander[testing]
-    coverage run --source=colander {envbindir}/nosetests
-    coverage xml -o coverage-py3.xml
+    {[py-cover]commands}
 setenv =
     COVERAGE_FILE=.coverage.py3
 
