--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py26,py27,py33,py34,py35,pypy,pypy3,
+    py27,py33,py34,py35,pypy,
     docs,
     {py2,py3}-cover,coverage
 
@@ -8,13 +8,11 @@ envlist =
 # Most of these are defaults but if you specify any you can't fall back
 # to defaults for others.
 basepython =
-    py26: python2.6
     py27: python2.7
     py33: python3.3
     py34: python3.4
     py35: python3.5
     pypy: pypy
-    pypy3: pypy3
     py2: python2.7
     py3: python3.5
 
