--- a/.travis.yml
+++ b/.travis.yml
@@ -6,20 +6,23 @@ matrix:
     include:
         - python: 2.7
           env: TOXENV=py27
-        - python: 3.3
-          env: TOXENV=py33
         - python: 3.4
           env: TOXENV=py34
         - python: 3.5
           env: TOXENV=py35
         - python: 3.6
           env: TOXENV=py36
+        - python: 3.7
+          env: TOXENV=py37
         - python: pypy
           env: TOXENV=pypy
         - python: 3.5
           env: TOXENV=py2-cover,py3-cover,coverage
         - python: 3.5
           env: TOXENV=docs
+    allow_failures:
+        - env: TOXENV=pypy3
+        - env: TOXENV=py37
 
 install:
   - travis_retry pip install tox
