--- a/.travis.yml
+++ b/.travis.yml
@@ -12,14 +12,14 @@ matrix:
           env: TOXENV=py35
         - python: 3.6
           env: TOXENV=py36
-        - python: 3.7
-          env: TOXENV=py37
         - python: pypy
           env: TOXENV=pypy
         - python: 3.5
           env: TOXENV=py2-cover,py3-cover,coverage
         - python: 3.5
           env: TOXENV=docs
+        - python: nightly
+          env: TOXENV=py37
     allow_failures:
         - env: TOXENV=pypy3
         - env: TOXENV=py37
