--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py27,py34,py35,py36,py37,pypy,
+    py27,py34,py35,py36,py37,pypy,pypy3,
     docs,
     {py2,py3}-cover,coverage
 
@@ -14,6 +14,7 @@ basepython =
     py36: python3.6
     py37: python3.7
     pypy: pypy
+    pypy3: pypy3
     py2: python2.7
     py3: python3.5
 
