--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,14 @@ matrix:
           env: TOXENV=py2-cover,py3-cover,coverage
         - python: 3.5
           env: TOXENV=docs
-        - python: nightly
+        - python: 3.7
           env: TOXENV=py37
+          dist: xenial
+          sudo: true
+        - python: nightly
+          env: TOXENV=py38
     allow_failures:
-        - env: TOXENV=pypy3
-        - env: TOXENV=py37
+        - env: TOXENV=py38
 
 install:
   - travis_retry pip install tox
