Format Python code of ``colander`` to conform to the PEP 8 style guide. Add some linters (``flake8`` and ``setup.py check``) into ``tox.ini``.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
 envlist =
+    lint
     py27,py34,py35,py36,py37,py38,pypy,pypy3,
     docs,
     {py2,py3}-cover,coverage
@@ -63,3 +64,13 @@ deps =
     coverage
 setenv =
     COVERAGE_FILE=.coverage
+
+[testenv:lint]
+skip_install = true
+basepython = python3.6
+commands =
+    flake8 colander setup.py
+    python setup.py check -r -s -m
+deps =
+    flake8
+    readme_renderer
