- Code has formatted with help of 'black'. - Added 'black' into list of linters inside of 'tox.ini'.

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,21 @@ cover-erase=1
 dev = develop easy_install colander[testing]
 docs = develop easy_install colander[docs]
 
+[metadata]
+license_file = LICENSE.txt
+
+[check-manifest]
+ignore =
+    .gitignore
+    .hgignore
+    .flake8
+    PKG-INFO
+    *.egg-info
+    *.egg-info/*
+ignore-default-rules = true
+ignore-bad-ideas =
+    colander/locale/*
+
 [compile_catalog]
 directory = colander/locale
 domain = colander
