--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,14 @@ matrix:
           env: TOXENV=pypy
         - python: pypy3
           env: TOXENV=pypy3
-        - python: 3.5
-          env: TOXENV=py2-cover,py3-cover,coverage
+        - python: 2.7
+          env: TOXENV=py27-cover
+        - python: 3.6
+          env: TOXENV=py36-cover,coverage
         - python: 3.5
           env: TOXENV=docs
+        - python: 3.6
+          env: TOXENV=lint
     allow_failures:
         - env: TOXENV=py38
 
