Restored coverage check for Python 2.7

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist =
     lint
     py27,py34,py35,py36,py37,py38,pypy,pypy3,
     docs,
-    py36-cover,coverage
+    py{27,36}-cover,coverage
 
 [testenv]
 # Most of these are defaults but if you specify any you can't fall back
@@ -35,11 +35,21 @@ commands =
 # cobertura jenkins reporting and b) pypy and jython can't handle any
 # combination of versions of coverage and nosexcover that i can find.
 
-[testenv:py36-cover]
+[py-cover]
 commands =
     pip install colander[testing]
     coverage run --source=colander {envbindir}/nosetests
     coverage xml -o {envname}.xml
+
+[testenv:py27-cover]
+commands =
+    {[py-cover]commands}
+setenv =
+    COVERAGE_FILE=.coverage.py2
+
+[testenv:py36-cover]
+commands =
+    {[py-cover]commands}
 setenv =
     COVERAGE_FILE=.coverage.py3
 
