--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,9 @@
-*.egg
-*.egg-info
+*.egg-info/
 *.pyc
-*$py.class
-*.pt.py
-*.txt.py
-*~
-*.swp
-.coverage
-.tox/
-py*-cover.xml
-coverage-*.xml
-nosetests*.xml
-env26/
-env25/
-env24/
-env27/
-jyenv/
-pypyenv/
-build/
-dist/
-coverage.xml
-distribute*.gz
-venv/
 env*/
-.idea
-.venv
+.coverage
+.coverage.*
+.tox/
+dist/
+build/
+coverage.xml
