Move from setup.py to setup.cfg
setup.py is left behind as a shim for pip install -e use

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,34 +1,65 @@
+[metadata]
+name = colander
+version = 1.7.0
+description = A simple schema-based serialization and deserialization library
+long_description = file: README.rst, CHANGES.txt
+long_description_content_type = text/x-rst
+keywords = serialize deserialize validate schema validation
+license = BSD-derived (http://www.repoze.org/LICENSE.txt)
+license_file = LICENSE.txt
+classifiers =
+    Development Status :: 6 - Mature
+    Intended Audience :: Developers
+    Programming Language :: Python
+    Programming Language :: Python :: 2
+    Programming Language :: Python :: 2.7
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: Implementation :: CPython
+    Programming Language :: Python :: Implementation :: PyPy
+    Operating System :: OS Independent
+url = https://github.com/Pylons/colander
+author = Agendaless Consulting
+author_email = pylons-discuss@googlegroups.com
+maintainer = Pylons Project
+maintainer_email = pylons-discuss@googlegroups.com
+
+[options]
+package_dir=
+    =src
+packages=find:
+python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
+install_requires =
+    translationstring
+    iso8601
+    enum34; python_version in "2.7"
+
+[options.packages.find]
+where=src
+
+[options.extras_require]
+testing =
+    pytest
+    pytest-cov
+    coverage>=5.0
+
+docs =
+    Sphinx>=1.8.1
+    docutils
+    pylons-sphinx-themes>=1.0.9
+
 [bdist_wheel]
 universal = 1
 
-[easy_install]
-zip_ok = false
-
-[nosetests]
-match=^test
-where=colander
-nocapture=1
-cover-package=colander
-cover-erase=1
-
-[aliases]
-dev = develop easy_install colander[testing]
-docs = develop easy_install colander[docs]
-
-[metadata]
-license_file = LICENSE.txt
-
-[check-manifest]
-ignore =
-    .gitignore
-    .hgignore
-    .flake8
-    PKG-INFO
-    *.egg-info
-    *.egg-info/*
-ignore-default-rules = true
-ignore-bad-ideas =
-    colander/locale/*
+[tool:pytest]
+python_files = test_*.py
+# For the benefit of test_wasyncore.py
+python_classes = Test_*
+testpaths =
+    tests
+addopts = -W always --cov --cov-report=term-missing
 
 [compile_catalog]
 directory = colander/locale
