--- a/setup.cfg
+++ b/setup.cfg
@@ -61,6 +61,10 @@ testpaths =
     tests
 addopts = -W always --cov --cov-report=term-missing
 
+[check-manifest]
+ignore-bad-ideas =
+    src/colander/locale/*
+
 [compile_catalog]
 directory = colander/locale
 domain = colander
