Explicitly depend on setuptools because we use pkg_resources

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ install_requires =
     translationstring
     iso8601
     enum34; python_version in "2.7"
+    setuptools >= 11.3  # pkg_resources.EntryPoint.resolve()
 
 [options.packages.find]
 where=src
