Disable flake8 for right now

--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ basepython = python3.8
 commands =
     black --check --diff .
     check-manifest
-    flake8 src/colander/
+    # flake8 src/colander/  # disabled for right now
     # build sdist/wheel
     python -m pep517.build .
     twine check dist/*
