--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ classifiers =
     Programming Language :: Python :: Implementation :: CPython
     Programming Language :: Python :: Implementation :: PyPy
     Operating System :: OS Independent
+    License :: Repoze Public License
 url = https://github.com/Pylons/colander
 author = Agendaless Consulting
 author_email = pylons-discuss@googlegroups.com
