--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,10 @@ classifiers =
     Operating System :: OS Independent
     License :: Repoze Public License
 url = https://github.com/Pylons/colander
+project_urls =
+    Documentation = https://docs.pylonsproject.org/projects/colander/en/latest/index.html
+    Changelog = https://docs.pylonsproject.org/projects/colander/en/latest/changes.html
+    Issue Tracker = https://github.com/Pylons/colander/issues
 author = Agendaless Consulting
 author_email = pylons-discuss@googlegroups.com
 maintainer = Pylons Project
