--- a/setup.cfg
+++ b/setup.cfg
@@ -70,8 +70,7 @@ addopts = -W always --cov --cov-report=term-missing
 
 [check-manifest]
 ignore-bad-ideas =
-    src/colander/locale/*
-    *.mo
+    src/colander/locale/**/*
 
 [compile_catalog]
 directory = colander/locale
