--- a/setup.cfg
+++ b/setup.cfg
@@ -70,7 +70,7 @@ addopts = -W always --cov --cov-report=term-missing
 
 [check-manifest]
 ignore-bad-ideas =
-    src/colander/locale/**/*
+    src/colander/locale/**/*.mo
 
 [compile_catalog]
 directory = colander/locale
