--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,7 @@ maintainer_email = pylons-discuss@googlegroups.com
 package_dir=
     =src
 packages=find:
-include_package_data= = True
+include_package_data = True
 python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
 install_requires =
     translationstring
