--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -15,7 +15,7 @@ jobs:
                     '3.8',
                     '3.9',
                     'pypy2',
-                    'pypy3'
+                    'pypy3',
                 ]
                 architecture: ['x64']
         name: "Python: ${{ matrix.py }}"
