--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist =
     lint,
     py27,pypy,
-    py35,py36,py37,py38,pypy3,
+    py35,py36,py37,py38,py39,py310,pypy3,
     docs,
     coverage
 isolated_build = True
