fix lint and update actions

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -15,7 +15,7 @@ include COPYRIGHT.txt
 include CHANGES.rst
 
 include setup.cfg pyproject.toml
-include .coveragerc .flake8
+include .coveragerc .flake8 pytest.ini
 include tox.ini rtd.txt
 
 exclude TODO.txt
