--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,7 @@
 [tox]
 envlist =
     lint,
-    py27,pypy,
-    py35,py36,py37,py38,py39,py310,pypy3,
+    py37,py38,py39,py310,py311,pypy3,
     docs,
     coverage
 isolated_build = True
@@ -10,83 +9,72 @@ isolated_build = True
 [testenv]
 commands =
     python --version
-    pytest {posargs:}
+    pytest --cov --cov-report= {posargs:}
 extras =
     testing
 setenv =
     COVERAGE_FILE=.coverage.{envname}
 
 [testenv:coverage]
-basepython = python3.8
 commands =
     coverage combine
-    coverage xml
-    coverage report --show-missing
+    coverage report
 deps =
     coverage
 setenv =
     COVERAGE_FILE=.coverage
-depends = py27, py35
-
-[testenv:lint]
-skip_install = True
-basepython = python3.8
-commands =
-    black --check --diff .
-    check-manifest
-    # flake8 src/colander/  # disabled for right now
-    # build sdist/wheel
-    python -m pep517.build .
-    twine check dist/*
-deps =
-    black
-    readme_renderer
-    check-manifest
-    pep517
-    twine
-    flake8
-    flake8-bugbear
 
 [testenv:docs]
-whitelist_externals =
+allowlist_externals =
     make
 commands =
     make -C docs html BUILDDIR={envdir} SPHINXOPTS="-W -E"
 extras =
     docs
 
-[testenv:run-flake8]
+[testenv:lint]
 skip_install = True
-basepython = python3.8
 commands =
-    flake8 src/colander/ tests
-deps =
-    flake8
-    flake8-bugbear
-
-[testenv:run-black]
-skip_install = True
-basepython = python3.8
-commands =
-    black .
+    isort --check-only --df src/colander tests setup.py
+    black --check --diff src/colander tests setup.py
+    flake8 src/colander tests setup.py
+    check-manifest
+    # build sdist/wheel
+    python -m build .
+    twine check dist/*
 deps =
     black
+    build
+    check-manifest
+    flake8
+    flake8-bugbear
+    isort
+    readme_renderer
+    twine
+
+[testenv:format]
+skip_install = true
+commands =
+    isort src/colander tests setup.py
+    black src/colander tests setup.py
+deps =
+    black
+    isort
 
 [testenv:build]
 skip_install = true
-basepython = python3.8
 commands =
     # clean up build/ and dist/ folders
     python -c 'import shutil; shutil.rmtree("build", ignore_errors=True)'
     # Make sure we aren't forgetting anything
     check-manifest
     # build sdist/wheel
-    python -m pep517.build .
+    python -m build .
     # Verify all is well
     twine check dist/*
 
 deps =
-    readme_renderer
+    build
     check-manifest
-    pep517
+    readme_renderer
     twine
