fail coverage under 100%

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ setenv =
 [testenv:coverage]
 commands =
     coverage combine
-    coverage report
+    coverage report --fail-under 100
 deps =
     coverage
 setenv =
