drop setuptools dependency for GlobalObject

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,6 @@ python_requires = >=3.7
 install_requires =
     translationstring
     iso8601
-    setuptools >= 11.3  # pkg_resources.EntryPoint.resolve()
 
 [options.packages.find]
 where=src
@@ -55,6 +54,7 @@ docs =
     Sphinx>=1.8.1
     docutils
     pylons-sphinx-themes>=1.0.9
+    setuptools
 
 [check-manifest]
 ignore-bad-ideas =
