--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools >= 41", "wheel"]
+requires = ["setuptools >= 41", "wheel", "babel"]
 build-backend = "setuptools.build_meta"
 
 [tool.black]
