--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,13 @@
 [metadata]
 name = colander
-version = 1.8.3
+version = 2.0
 description = A simple schema-based serialization and deserialization library
-long_description = file: README.rst, CHANGES.txt
+long_description = file: README.rst, CHANGES.rst
 long_description_content_type = text/x-rst
 keywords = serialize deserialize validate schema validation
 license = BSD-derived (http://www.repoze.org/LICENSE.txt)
-license_file = LICENSE.txt
+license_files =
+    LICENSE.txt
 classifiers =
     Development Status :: 6 - Mature
     Intended Audience :: Developers
@@ -49,6 +50,7 @@ testing =
     pytest
     pytest-cov
     coverage>=5.0
+    babel
 
 docs =
     Sphinx>=1.8.1
@@ -61,22 +63,23 @@ ignore-bad-ideas =
     src/colander/locale/**/*.mo
 
 [compile_catalog]
-directory = colander/locale
+directory = src/colander/locale
 domain = colander
 statistics = true
 
 [extract_messages]
 add_comments = TRANSLATORS:
-output_file = colander/locale/colander.pot
+input_paths = src/colander
+output_file = src/colander/locale/colander.pot
 width = 80
 
 [init_catalog]
 domain = colander
-input_file = colander/locale/colander.pot
-output_dir = colander/locale
+input_file = src/colander/locale/colander.pot
+output_dir = src/colander/locale
 
 [update_catalog]
 domain = colander
-input_file = colander/locale/colander.pot
-output_dir = colander/locale
+input_file = src/colander/locale/colander.pot
+output_dir = src/colander/locale
 previous = true
