--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ maintainer_email = pylons-discuss@googlegroups.com
 [options]
 package_dir=
     =src
-packages=find:
+packages=find_namespace:
 include_package_data = True
 python_requires = >=3.7
 install_requires =
