--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,4 +31,4 @@ force_sort_within_sections = true
 no_lines_before = "THIRDPARTY"
 sections = "FUTURE,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
 default_section = "THIRDPARTY"
-known_first_party = "hupper"
+known_first_party = "colander"
