--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
     lint,
-    py37,py38,py39,py310,py311,pypy3,
+    py37,py38,py39,py310,py311,py312,pypy3,
     docs,
     coverage
 isolated_build = True
