--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -35,6 +35,8 @@ jobs:
                       architecture: x86
                     - os: "macos-latest"
                       architecture: x86
+                    - os: "macos-latest"
+                      py: 3,7, 3.8, 3.9
         name: "Python: ${{ matrix.py }}-${{ matrix.architecture }} on ${{ matrix.os }}"
         runs-on: ${{ matrix.os }}
         steps:
