--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -25,12 +25,16 @@ jobs:
                 os:
                     - "ubuntu-latest"
                     - "windows-latest"
+                    # later versions no longer support Python < 3.10.
+                    - "macos-11"
                 architecture:
                     - x64
                     - x86
                 exclude:
                     # Linux and macOS don't have x86 python
                     - os: "ubuntu-latest"
+                      architecture: x86
+                    - os: "macos-11"
                       architecture: x86
         name: "Python: ${{ matrix.py }}-${{ matrix.architecture }} on ${{ matrix.os }}"
         runs-on: ${{ matrix.os }}
