tests: enable 'tox -p'

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ deps =
     coverage
 setenv =
     COVERAGE_FILE=.coverage
+depends = py38,py39,py310,py311,py312,pypy3
 
 [testenv:docs]
 allowlist_externals =
